create google authentication and modify some issue
