# src/models/Product.js
@@ -1,10 +1,10 @@
 const { pool } = require("../db/dbConnection");
 
 const Product = {
-  create: ({ title, avatar, status, price, description, category, tags }) =>
+  create: ({ title, avatar, status, price, discount, description, category, tags }) =>
     pool.query(
-      "INSERT INTO products (title, avatar, status, price, description, category, tags) VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING *",
-      [title, avatar, status, price, description, category, tags]
+      "INSERT INTO products (title, avatar, status, price, description, category, tags, discount) VALUES ($1, $2, $3, $4, $5, $6, $7, $8) RETURNING *",
+      [title, avatar, status, price, description, category, tags, discount]
     ),
   findItemById: (id) =>
     pool.query("SELECT * FROM products WHERE id = $1", [id]),
